Refactoring to have a simple code
On this change I'm refactoring the code to have a simple readability
and manutenability. I'm using some DDD concepts to have more specific
classes and methods.
