# backend/src/Controller/MoveController.php
@@ -1,12 +1,15 @@
 <?php
 namespace App\Controller;
 
-use App\Entity\Player;
-use App\Entity\Position;
+use App\Domain\Model\Game;
+use App\Domain\Move\BotMove;
+use App\Domain\Storage;
+use App\Domain\Board;
+use App\Domain\Player;
+use App\Domain\Position;
 use App\Exception\GameNotFoundException;
 use App\Exception\GameOverException;
 use App\Exception\InvalidMoveException;
-use App\Model\Game;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
@@ -14,87 +17,47 @@ use OpenApi\Annotations as OA;
 
 class MoveController
 {
-    /** @var Game */
-    private $game;
+    /** @var Storage */
+    private $storage;
 
-    public function __construct(Game $game)
+    public function __construct(Storage $storage)
     {
-        $this->game = $game;
-    }
-
-    /**
-     * @OA\Get(
-     *     path="/v1/games/{gameId}/move/bot",
-     *     description="This resource will give you the next BOT movement based on game board.",
-     *     @OA\Parameter(name="gameId",
-     *         in="path",
-     *         required=true,
-     *         @OA\Schema(type="string")
-     *     ),
-     *     @OA\Response(response="200", description="New bot movement and staus if game is over"),
-     *     @OA\Response(response="404", description="The game informed not exists"),
-     *     @OA\Response(response="400", description="Error when bot try to move")
-     * )
-     */
-    public function moveBot(Request $request, string $gameId) : Response
-    {
-        try {
-            $move = $this->game->moveBot($gameId);
-
-            if (isset($move['isOver']) && $move['isOver'] == true) {
-                return new JsonResponse(
-                    [
-                        'row' => $move['row'],
-                        'col' => $move['col'],
-                        'status'    => 'gameover',
-                        'message'   => $move['message'],
-                        'board'     => $this->game->getBoard()->getContent()
-                    ]
-                );
-            }
-            return new JsonResponse(
-                [
-                    'row' => $move['row'],
-                    'col' => $move['col']
-                ]
-            );
-        } catch (GameNotFoundException $e) {
-            return new JsonResponse(
-                [
-                    'error' => $e->getMessage()
-                ],
-                JsonResponse::HTTP_NOT_FOUND
-            );
-        } catch (InvalidMoveException $e) {
-            return new JsonResponse(
-                [
-                    'error' => $e->getMessage()
-                ],
-                JsonResponse::HTTP_BAD_REQUEST
-            );
-        }
+        $this->storage = $storage;
     }
 
     /**
      * @OA\Post(
-     *     path="/v1/games/{gameId}/move/human",
-     *     description="This resource will save the informed move of human player.",
+     *     path="/v1/games/{gameId}/move",
+     *     description="This resource will register the human move and generate a new Bot move.",
      *     @OA\Parameter(name="gameId",
      *         in="path",
      *         required=true,
+     *         description="The ID of the game",
      *         @OA\Schema(type="string")
      *     ),
      *     @OA\Response(response="200", description="Return the information when game is over"),
-     *     @OA\Response(response="204", description="Move saved and game not over yet"),
+     *     @OA\Response(response="201", description="Move saved and bot move was generated"),
      *     @OA\Response(response="400", description="Error when human is trying to move to a filled position"),
      *     @OA\Response(response="422", description="Error on the body request because is missing the move")
      * )
      */
-    public function moveHuman(Request $request, string $gameId) : Response
+    public function create(Request $request, string $gameId) : Response
     {
         $body = json_decode($request->getContent());
 
+        $humanPlayer = new Player(Player::O_TEAM);
+        $game = new Game(
+            new Board(),
+            $humanPlayer,
+            new BotMove()
+        );
+        $game->setId($gameId);
+
         try {
+            $gameStr = $this->storage->get($game);
+            $game = $game->unserialize($gameStr);
+            $game->setId($gameId);
+
             if (!isset($body->move) || !is_array($body->move)) {
                 return new JsonResponse(
                     [
@@ -104,17 +67,23 @@ class MoveController
                 );
             }
 
-            $game = $this->game->status($gameId);
-            $player = new Player($game['humanPlayer']);
             $move = current($body->move);
             $position = new Position($move->row, $move->col);
 
-            $this->game->moveHuman(
-                $gameId,
-                $player,
+            $game->move(
+                $humanPlayer,
                 $position
             );
-            return new JsonResponse(null, JsonResponse::HTTP_NO_CONTENT);
+
+            $this->storage->save($game);
+
+            return new JsonResponse(
+                [
+                    'row' => $game->getNextBotMove()->getRow(),
+                    'col' => $game->getNextBotMove()->getColumn(),
+                ],
+                JsonResponse::HTTP_CREATED
+            );
         } catch (GameNotFoundException $e) {
             return new JsonResponse(
                 [
@@ -123,13 +92,16 @@ class MoveController
                 JsonResponse::HTTP_NOT_FOUND
             );
         } catch (GameOverException $e) {
-            return new JsonResponse(
-                [
-                    'status'    => 'gameover',
-                    'message'   => $e->getMessage(),
-                    'board'     => $this->game->getBoard()->getContent()
-                ]
-            );
+            $response = [
+                'status'    => Game::GAME_OVER_STATUS,
+                'message'   => $e->getMessage(),
+            ];
+
+            if ($game->getNextBotMove() instanceof Position) {
+                $response['row'] = $game->getNextBotMove()->getRow();
+                $response['col'] = $game->getNextBotMove()->getColumn();
+            }
+            return new JsonResponse($response);
         } catch (InvalidMoveException $e) {
             return new JsonResponse(
                 [
